text-align fix

--- a/src/scss/_landing.scss
+++ b/src/scss/_landing.scss
@@ -26,6 +26,10 @@
         margin-top: -300px;
         margin-bottom: -10px;
     }
+
+    .content {
+        text-align: center;
+    }
 }
 
 .memories-options {
